--- a/estilo/style.css
+++ b/estilo/style.css
@@ -65,20 +65,22 @@ nav {
     background-color: var(--cor5);
     padding: 5px;
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.397);
+    min-height: 13px;
 }
 
 nav > a {
     text-decoration: none;
     color: var(--cor1);
     font-weight: bold;
-    padding: 10px;
+    padding: 5px 10px;
+    border-radius: 5px;
+
 }
 
 nav > a:hover{
     background-color: var(--cor2);
     color: var(--cor5);
     transition-duration: 0.5s;
-    border-radius: 5px;
 }
 
 main {
